# plagiarism-checker

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-03-23-html-report-improvements.md  2026-03-23-plagiarism-checker.md
docs/superpowers/specs/: 2026-03-23-plagiarism-checker-design.md
src/plagiarism_checker/: cli.py  config.py  db.py  models.py
src/plagiarism_checker/checker/: matcher.py  report.py
src/plagiarism_checker/extractor/: pdf_extractor.py
src/plagiarism_checker/indexer/: winnowing.py
src/plagiarism_checker/scraper/: oai_harvester.py
src/plagiarism_checker/utils/: text.py
tests/: conftest.py  test_integration.py  test_matcher.py  test_pdf_extractor.py  test_report.py  test_text.py  test_winnowing.py
